fix step 15 step 16 gradient on mobile

--- a/src/components/Step-17/Step.module.scss
+++ b/src/components/Step-17/Step.module.scss
@@ -10,7 +10,7 @@
   line-height: 30px;
   color: rgb(45, 50, 64);
   text-align: center;
-  margin: 50px 0px 24px;
+  margin-bottom: 24px;
 }
 
 .review_wrapper {
